--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-fundo: #47c1da ;
+    --cor-principal: #bc5dcd ;
+    --cor-secundaria: #f6f6f9; 
+    --cor-destaque: #98ee5a;
+    --cor-texto: #0c0c0c;
 
 }
 
